card_scan.html を更新

--- a/card_scan.html
+++ b/card_scan.html
@@ -2,99 +2,157 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>改善案切り替えプレビュー</title>
+  <title>リアルタイムカード枠検出（改善案切り替え版）</title>
   <script async src="https://docs.opencv.org/4.x/opencv.js" onload="onOpenCvReady();"></script>
+  <script src="https://cdn.jsdelivr.net/npm/tesseract.js@4.0.2/dist/tesseract.min.js"></script>
   <style>
-    canvas {
-      border: 1px solid black;
-      margin-top: 1em;
+    video { display: none; }
+    canvas { 
+      border: 1px solid black; 
+      display: block; 
+      margin: 10px auto; 
     }
-    .button-group {
-      margin-top: 1em;
-    }
-    .active {
-      font-weight: bold;
-      background-color: #d0f0c0;
-    }
+    button { display: block; margin: 20px auto; padding: 15px 30px; font-size: 20px; }
   </style>
 </head>
 <body>
-  <h2>カード画像アップロード</h2>
-  <input type="file" id="fileInput" accept="image/*">
-  <div id="opencv-status">🔄 OpenCV初期化中...</div>
-
-  <div class="button-group">
-    <button id="btn1">改善案1</button>
-    <button id="btn2">改善案2</button>
-  </div>
-
+  <h1>リアルタイムカード枠検出（改善案切り替え版）</h1>
+  <div id="opencv-status" style="font-weight: bold; margin: 1em;"></div>
+  <video id="video" autoplay playsinline></video>
   <canvas id="canvasOutput"></canvas>
+  <button id="mode1-button">改善案1: 通常検出</button>
+  <button id="mode2-button">改善案2: モルフォロジー処理</button>
+  <button id="mode3-button">改善案3: 色ベース検出</button>
+  <button id="trim-button">トリミング</button>
+  <button id="ocr-button">OCRを実行</button>
+  <div id="recognized-text">読み取った文字列: <span id="text-output">なし</span></div>
 
   <script>
-    let uploadedImage = null;
-    let currentStrategy = "strategy1";
+    let video = document.getElementById('video');
+    let canvas = document.getElementById('canvasOutput');
+    let ctx = canvas.getContext('2d');
+    let streaming = false;
+    let textOutput = document.getElementById('text-output');
+    let ocrButton = document.getElementById('ocr-button');
+    let trimButton = document.getElementById('trim-button');
+    let currentMode = 1; // デフォルトは改善案1
+
+    // 各ボタンのクリックイベント
+    document.getElementById('mode1-button').addEventListener('click', () => setMode(1));
+    document.getElementById('mode2-button').addEventListener('click', () => setMode(2));
+    document.getElementById('mode3-button').addEventListener('click', () => setMode(3));
+
+    function setMode(mode) {
+      currentMode = mode;
+      console.log(`現在のモード: 改善案${mode}`);
+    }
 
     function onOpenCvReady() {
+      const statusEl = document.getElementById("opencv-status");
+      statusEl.innerText = "🔄 OpenCV.js 初期化中...";
       cv['onRuntimeInitialized'] = () => {
-        document.getElementById("opencv-status").innerText = "✅ OpenCV初期化完了";
-        document.getElementById("fileInput").addEventListener("change", handleImageUpload);
-        document.getElementById("btn1").addEventListener("click", () => applyStrategy("strategy1"));
-        document.getElementById("btn2").addEventListener("click", () => applyStrategy("strategy2"));
+        statusEl.innerText = "✅ OpenCV.js 読み込み完了！";
+        startCamera();
       };
     }
 
-    function handleImageUpload(event) {
-      const file = event.target.files[0];
-      if (!file) return;
-
-      const reader = new FileReader();
-      reader.onload = (e) => {
-        const img = new Image();
-        img.onload = () => {
-          const canvas = document.getElementById('canvasOutput');
-          canvas.width = img.width;
-          canvas.height = img.height;
-          const ctx = canvas.getContext('2d');
-          ctx.drawImage(img, 0, 0);
-          uploadedImage = canvas;
-          applyStrategy(currentStrategy); // 初期改善案で即実行
-        };
-        img.src = e.target.result;
-      };
-      reader.readAsDataURL(file);
+    function startCamera() {
+      navigator.mediaDevices.getUserMedia({
+        video: { facingMode: "environment" }
+      }).then(stream => {
+        video.srcObject = stream;
+        video.play();
+        streaming = true;
+        video.addEventListener('loadedmetadata', () => {
+          canvas.width = video.videoWidth;
+          canvas.height = video.videoHeight;
+          processVideo();
+        });
+      }).catch(err => {
+        console.error("カメラの起動に失敗しました: ", err);
+        alert("カメラの起動に失敗しました。デバイスのカメラ権限を確認してください。");
+      });
     }
 
-    function applyStrategy(strategy) {
-      currentStrategy = strategy;
-      document.getElementById("btn1").classList.toggle("active", strategy === "strategy1");
-      document.getElementById("btn2").classList.toggle("active", strategy === "strategy2");
+    function processVideo() {
+      if (!streaming) return;
+      ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
+      let src = cv.imread(canvas);
 
-      if (!uploadedImage || typeof cv === "undefined") return;
-
-      const src = cv.imread(uploadedImage);
-      const dst = new cv.Mat();
-
-      if (strategy === "strategy1") {
-        // 改善案1：ぼかして角度取得
-        const gray = new cv.Mat();
-        cv.cvtColor(src, gray, cv.COLOR_RGBA2GRAY, 0);
-        cv.GaussianBlur(gray, gray, new cv.Size(5,5), 0);
-        cv.Canny(gray, dst, 75, 200);
-        gray.delete();
-      } else if (strategy === "strategy2") {
-        // 改善案2：モルフォロジーでノイズ除去
-        const gray = new cv.Mat();
-        const morph = new cv.Mat();
-        cv.cvtColor(src, gray, cv.COLOR_RGBA2GRAY, 0);
-        let kernel = cv.getStructuringElement(cv.MORPH_RECT, new cv.Size(3,3));
-        cv.morphologyEx(gray, morph, cv.MORPH_CLOSE, kernel);
-        cv.Canny(morph, dst, 50, 150);
-        gray.delete(); morph.delete(); kernel.delete();
+      if (currentMode === 1) {
+        detectWithMode1(src);
+      } else if (currentMode === 2) {
+        detectWithMode2(src);
+      } else if (currentMode === 3) {
+        detectWithMode3(src);
       }
 
-      cv.imshow('canvasOutput', dst);
-      src.delete(); dst.delete();
+      cv.imshow('canvasOutput', src);
+      src.delete();
+      requestAnimationFrame(processVideo);
     }
+
+    function detectWithMode1(src) {
+      // 改善案1: 通常の輪郭検出
+      let gray = new cv.Mat();
+      let edges = new cv.Mat();
+      cv.cvtColor(src, gray, cv.COLOR_RGBA2GRAY, 0);
+      cv.Canny(gray, edges, 50, 150);
+      findAndDrawContours(edges, src);
+      gray.delete(); edges.delete();
+    }
+
+    function detectWithMode2(src) {
+      // 改善案2: モルフォロジー処理を追加
+      let gray = new cv.Mat();
+      let blurred = new cv.Mat();
+      let edges = new cv.Mat();
+      cv.cvtColor(src, gray, cv.COLOR_RGBA2GRAY, 0);
+      cv.GaussianBlur(gray, blurred, new cv.Size(5, 5), 0);
+
+      let kernel = cv.Mat.ones(5, 5, cv.CV_8U);
+      cv.dilate(blurred, blurred, kernel);
+      cv.erode(blurred, blurred, kernel);
+      cv.Canny(blurred, edges, 50, 150);
+
+      findAndDrawContours(edges, src);
+      gray.delete(); blurred.delete(); edges.delete(); kernel.delete();
+    }
+
+    function detectWithMode3(src) {
+      // 改善案3: 色ベースの検出
+      let hsv = new cv.Mat();
+      let mask = new cv.Mat();
+      cv.cvtColor(src, hsv, cv.COLOR_RGBA2HSV, 0);
+      let lower = new cv.Mat(hsv.rows, hsv.cols, hsv.type(), [0, 50, 50, 0]);
+      let upper = new cv.Mat(hsv.rows, hsv.cols, hsv.type(), [10, 255, 255, 255]);
+      cv.inRange(hsv, lower, upper, mask);
+
+      findAndDrawContours(mask, src);
+      hsv.delete(); mask.delete(); lower.delete(); upper.delete();
+    }
+
+    function findAndDrawContours(edges, src) {
+      let contours = new cv.MatVector();
+      let hierarchy = new cv.Mat();
+      cv.findContours(edges, contours, hierarchy, cv.RETR_EXTERNAL, cv.CHAIN_APPROX_SIMPLE);
+
+      for (let i = 0; i < contours.size(); ++i) {
+        let cnt = contours.get(i);
+        let rect = cv.boundingRect(cnt);
+        cv.rectangle(src, new cv.Point(rect.x, rect.y), new cv.Point(rect.x + rect.width, rect.y + rect.height), [255, 0, 0, 255], 2);
+      }
+
+      contours.delete(); hierarchy.delete();
+    }
+
+    trimButton.addEventListener('click', () => {
+      alert("現在の改善案に基づいてトリミングを実行します。");
+    });
+
+    ocrButton.addEventListener('click', () => {
+      alert("現在の改善案に基づいてOCRを実行します。");
+    });
   </script>
 </body>
 </html>
