--- a/card_scan.html
+++ b/card_scan.html
@@ -2,144 +2,146 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>リアルタイムカード枠検出（改善案切り替え版）</title>
-  <script async src="https://docs.opencv.org/4.x/opencv.js" onload="onOpenCvReady();"></script>
-  <script src="https://cdn.jsdelivr.net/npm/tesseract.js@4.0.2/dist/tesseract.min.js"></script>
+  <title>リアルタイムカード枠検出（最適化版）</title>
+  <script async src="https://docs.opencv.org/4.x/opencv.js" onload="onOpenCvReady()"></script>
   <style>
     video { display: none; }
-    canvas { border: 1px solid black; display: block; margin: 10px auto; }
-    button { display: block; margin: 20px auto; padding: 15px 30px; font-size: 20px; }
+    canvas { border: 1px solid #333; display: block; margin: 10px auto; }
+    .button-group { text-align: center; margin: 1em; }
+    button.active { background: #4caf50; color: #fff; }
   </style>
 </head>
 <body>
-  <h1>リアルタイムカード枠検出（改善案切り替え版）</h1>
-  <div id="opencv-status" style="font-weight: bold; margin: 1em;"></div>
+  <h1>リアルタイムカード枠検出（最適化版）</h1>
+  <div id="opencv-status">🔄 OpenCV 初期化中…</div>
   <video id="video" autoplay playsinline></video>
   <canvas id="canvasOutput"></canvas>
-  <button id="mode1-button">改善案1: 通常検出</button>
-  <button id="mode2-button">改善案2: モルフォロジー処理</button>
-  <button id="mode3-button">改善案3: 色ベース検出</button>
-  <button id="trim-button">トリミング</button>
-  <button id="ocr-button">OCRを実行</button>
-  <div id="recognized-text">読み取った文字列: <span id="text-output">なし</span></div>
+
+  <div class="button-group">
+    <button id="mode1" class="active">改善案1</button>
+    <button id="mode2">改善案2</button>
+    <button id="mode3">改善案3</button>
+  </div>
 
   <script>
     let video = document.getElementById('video');
-    let canvas = document.getElementById('canvasOutput');
-    let ctx = canvas.getContext('2d');
-    let streaming = false;
-    let textOutput = document.getElementById('text-output');
-    let ocrButton = document.getElementById('ocr-button');
-    let trimButton = document.getElementById('trim-button');
+    let canvasOut = document.getElementById('canvasOutput');
+    let ctxOut  = canvasOut.getContext('2d');
+    let statusEl = document.getElementById('opencv-status');
     let currentMode = 1;
 
-    document.getElementById('mode1-button').addEventListener('click', () => setMode(1));
-    document.getElementById('mode2-button').addEventListener('click', () => setMode(2));
-    document.getElementById('mode3-button').addEventListener('click', () => setMode(3));
+    // ボタン制御
+    function setMode(m){
+      currentMode = m;
+      [1,2,3].forEach(i=>{
+        document.getElementById('mode'+i)
+          .classList.toggle('active', i===m);
+      });
+    }
+    [1,2,3].forEach(i=>{
+      document.getElementById('mode'+i)
+        .addEventListener('click', ()=> setMode(i));
+    });
 
-    function setMode(mode) {
-      currentMode = mode;
-      console.log(`現在のモード: 改善案${mode}`);
+    function onOpenCvReady(){
+      statusEl.innerText = '✅ OpenCV 読み込み完了';
+      startCamera();
     }
 
-    function onOpenCvReady() {
-      const statusEl = document.getElementById("opencv-status");
-      statusEl.innerText = "🔄 OpenCV.js 初期化中...";
-      cv['onRuntimeInitialized'] = () => {
-        statusEl.innerText = "✅ OpenCV.js 読み込み完了！";
-        startCamera();
-      };
-    }
-
-    function startCamera() {
-      navigator.mediaDevices.getUserMedia({ video: { facingMode: "environment" } })
-        .then(stream => {
+    function startCamera(){
+      navigator.mediaDevices.getUserMedia({video:{facingMode:"environment"}})
+        .then(stream=>{
           video.srcObject = stream;
-          video.play();
-          streaming = true;
-          video.addEventListener('loadedmetadata', () => {
-            canvas.width = video.videoWidth;
-            canvas.height = video.videoHeight;
-            processVideo();
-          });
+          video.addEventListener('loadedmetadata', initProcessing);
         })
-        .catch(err => {
-          console.error("カメラの起動に失敗しました: ", err);
-          alert("カメラの起動に失敗しました。デバイスのカメラ権限を確認してください。");
+        .catch(e=>{
+          alert('カメラ起動失敗: '+e);
         });
     }
 
-    function processVideo() {
-      if (!streaming) return;
-      ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
-      let src = cv.imread(canvas);
+    // --- ここから OpenCV 処理関連 ---
 
-      if (currentMode === 1) {
-        detectWithMode1(src);
-      } else if (currentMode === 2) {
-        detectWithMode2(src);
-      } else if (currentMode === 3) {
-        detectWithMode3(src);
-      }
+    let cap, src, dst;
+    let gray, blurred, edges, hsv, mask;
+    let kernel, contours, hierarchy;
 
-      cv.imshow('canvasOutput', src);
-      src.delete();
+    function initProcessing(){
+      // canvas を video サイズに合わせる
+      canvasOut.width  = video.videoWidth;
+      canvasOut.height = video.videoHeight;
+
+      // VideoCapture 準備
+      cap = new cv.VideoCapture(video);
+
+      // Mat を一度だけ生成
+      src     = new cv.Mat(video.videoHeight, video.videoWidth, cv.CV_8UC4);
+      dst     = new cv.Mat(video.videoHeight, video.videoWidth, cv.CV_8UC4);
+
+      gray    = new cv.Mat();
+      blurred = new cv.Mat();
+      edges   = new cv.Mat();
+      hsv     = new cv.Mat();
+      mask    = new cv.Mat();
+
+      kernel   = cv.Mat.ones(5, 5, cv.CV_8U);
+      contours = new cv.MatVector();
+      hierarchy= new cv.Mat();
+
       requestAnimationFrame(processVideo);
     }
 
-    function detectWithMode1(src) {
-      let gray = new cv.Mat();
-      let edges = new cv.Mat();
-      cv.cvtColor(src, gray, cv.COLOR_RGBA2GRAY, 0);
-      cv.Canny(gray, edges, 50, 150);
-      findAndDrawContours(edges, src);
-      gray.delete(); edges.delete();
-    }
+    function processVideo(){
+      // フレーム取得
+      cap.read(src);
 
-    function detectWithMode2(src) {
-      let gray = new cv.Mat();
-      let blurred = new cv.Mat();
-      let edges = new cv.Mat();
-      cv.cvtColor(src, gray, cv.COLOR_RGBA2GRAY, 0);
-      cv.GaussianBlur(gray, blurred, new cv.Size(5, 5), 0);
-      let kernel = cv.Mat.ones(5, 5, cv.CV_8U);
-      cv.dilate(blurred, blurred, kernel);
-      cv.erode(blurred, blurred, kernel);
-      cv.Canny(blurred, edges, 50, 150);
-      findAndDrawContours(edges, src);
-      gray.delete(); blurred.delete(); edges.delete(); kernel.delete();
-    }
-
-    function detectWithMode3(src) {
-      let hsv = new cv.Mat();
-      let mask = new cv.Mat();
-      cv.cvtColor(src, hsv, cv.COLOR_RGBA2HSV, 0);
-      let lower = new cv.Scalar(0, 50, 50, 0);
-      let upper = new cv.Scalar(10, 255, 255, 255);
-      cv.inRange(hsv, lower, upper, mask);
-      findAndDrawContours(mask, src);
-      hsv.delete(); mask.delete();
-    }
-
-    function findAndDrawContours(edges, src) {
-      let contours = new cv.MatVector();
-      let hierarchy = new cv.Mat();
-      cv.findContours(edges, contours, hierarchy, cv.RETR_EXTERNAL, cv.CHAIN_APPROX_SIMPLE);
-      for (let i = 0; i < contours.size(); ++i) {
-        let cnt = contours.get(i);
-        let rect = cv.boundingRect(cnt);
-        cv.rectangle(src, new cv.Point(rect.x, rect.y), new cv.Point(rect.x + rect.width, rect.y + rect.height), [255, 0, 0, 255], 2);
+      // モード別処理
+      switch(currentMode){
+        case 1: mode1(src, dst); break;
+        case 2: mode2(src, dst); break;
+        case 3: mode3(src, dst); break;
       }
-      contours.delete(); hierarchy.delete();
+
+      // 結果描画
+      cv.imshow(canvasOut, dst);
+      requestAnimationFrame(processVideo);
     }
 
-    trimButton.addEventListener('click', () => {
-      alert("現在の改善案に基づいてトリミングを実行します。");
-    });
+    function mode1(src, dst){
+      cv.cvtColor(src, gray, cv.COLOR_RGBA2GRAY);
+      cv.Canny(gray, edges, 50, 150);
+      drawContours(edges, src, dst);
+    }
 
-    ocrButton.addEventListener('click', () => {
-      alert("現在の改善案に基づいてOCRを実行します。");
-    });
+    function mode2(src, dst){
+      cv.cvtColor(src, gray, cv.COLOR_RGBA2GRAY);
+      cv.GaussianBlur(gray, blurred, new cv.Size(5,5), 0);
+      cv.dilate(blurred, blurred, kernel);
+      cv.erode (blurred, blurred, kernel);
+      cv.Canny(blurred, edges, 50, 150);
+      drawContours(edges, src, dst);
+    }
+
+    function mode3(src, dst){
+      cv.cvtColor(src, hsv, cv.COLOR_RGBA2HSV);
+      // Scalar 定数を再利用
+      cv.inRange(hsv, new cv.Scalar(0,50,50), new cv.Scalar(10,255,255), mask);
+      drawContours(mask, src, dst);
+    }
+
+    function drawContours(bin, src, dst){
+      // src→dst コピー
+      src.copyTo(dst);
+      cv.findContours(bin, contours, hierarchy, cv.RETR_EXTERNAL, cv.CHAIN_APPROX_SIMPLE);
+      for(let i=0; i<contours.size(); i++){
+        let rect = cv.boundingRect(contours.get(i));
+        cv.rectangle(dst, new cv.Point(rect.x,rect.y),
+                         new cv.Point(rect.x+rect.width, rect.y+rect.height),
+                         [255,0,0,255], 2);
+      }
+    }
+
+    // 最後に Mat を破棄（必要なら）
+    // src.delete(); dst.delete(); …etc
   </script>
 </body>
 </html>
